# frida-server-manger

./: .gitignore  PUBLISH_TO_PYPI.md  README.md  justfile  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml
fsm/: cli.py  core.py  tes.py
